# PCAD_Batch_export

./: .gitignore  README.md  batch_export.py  pyproject.toml  setup.py  template.docx
