[project]
name = "pcad-batch-export"
version = "0.3.5"
description = "PCAD Report Export"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cx-freeze>=8.4.0",
    "docxcompose>=1.4.0",
    "keyboard>=0.13.5",
    "pdf2image>=1.17.0",
    "py2pdf>=0.1.3",
    "pypdf2>=3.0.1",
    "pyside6>=6.9.2",
    "python-docx>=1.2.0",
    "pywinauto>=0.6.9",
    "qt-material>=2.17",
]
